# rooky-annotator

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: lib.rs  main.rs  router.rs
src/components/: expert.rs  mod.rs  modal.rs  rookie.rs  user_profile_card_standalone.rs
src/contexts/: configs.rs  live_game.rs  mod.rs  user_metadata.rs
src/models/: mod.rs  nostr_metadata.rs
src/pages/: home.rs  key_recovery.rs  login.rs  mod.rs  profile.rs  relay_management.rs  review.rs
