[package]
name = "annotator"
version = "0.1.0"
edition = "2021"

[dependencies]
rooky-core = "0.1.0"
chessboard-js = { version = "0.1.0", path = "../rooky/chessboard-js" }
gloo = "0.11.0"
lucide-yew = "1.1.0"
web-sys = { version = "0.3", features = ["HtmlFormElement", "HtmlSelectElement", "RadioNodeList", "TouchList", "Touch", "CssStyleDeclaration", "MediaQueryList"] }
yew = { version = "0.21.0", features = ["csr"] }
shady-minions = { path = "./shady-minions" }
yew-router = "0.18.0"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = "0.2"
chrono = "0.4.41"
pgn-reader = "0.27.0"
shakmaty = { version = "0.27.2", features = ["variant"] }
wasm-bindgen-test = "0.3.50"
wasm-bindgen-futures = "0.4.50"
nostr-minions = "0.1.18"

